--- a/css/base.css
+++ b/css/base.css
@@ -132,7 +132,7 @@ footer {
     background-color: orangered;
     color: rgb(231, 245, 175);
     cursor: pointer;
-    padding: 10px;
+    padding: 30px 20px;
     border-radius: 50%;
     font-size: 18px;
 }
@@ -173,7 +173,7 @@ footer {
     }
 
     #myBtn {
-        padding: 5px;
+        padding: 25px 15px;
     }
 }
 
@@ -235,5 +235,49 @@ footer {
         display: block;
         margin-right: 3rem;
         color: rgb(2, 2, 112);
+    }
+
+    #myBtn {
+        padding: 25px 15px;
+    }
+}
+
+@media (max-width :425px) {
+    #top-header {
+        padding: 0;
+    }
+    
+    #callable-div a {
+        padding-right: 0;
+    }
+    
+    #number {
+        font-size: 0.9rem;
+    }
+    
+    #social-icons {
+        margin-right: 1rem;
+    }
+    
+    #social-icons i {
+        margin-left: 1rem;
+    }
+    
+    #envelop {
+        margin-right: 0.9rem;
+    }
+    
+    #logo {
+        display: inline-block;
+        margin-left: 1rem;
+        margin-top: 1rem;
+    }
+    
+    #logo img {
+        width: 7rem;
+    }
+
+    #menubar {
+        margin-right: 1rem;
     }
 }
