--- a/css/index.css
+++ b/css/index.css
@@ -396,6 +396,36 @@ main {
     }
 }
 
+@media (max-width: 883px) {    
+    #about-me {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    
+    #about-me h3 {
+        font-size: 3.1rem;
+        margin-bottom: 1rem;
+    }
+    
+    #about-me-first-div {
+        text-align: left;
+        padding: 3rem;
+        height: 50%;
+    }
+    
+    #about-me-second-div {
+        width: 100%;
+        height: 35rem;
+    }
+    
+    #about-me-img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        border-radius: 4px 4px 0 0;
+    }
+}
+
 @media (max-width: 767px) {   
     #first-section {
         padding: 18rem 2rem 10rem 2rem;
@@ -410,7 +440,6 @@ main {
         text-transform: uppercase;
         font-size: 1.3rem;
     }
-    
     
     #first-section article h2 {
         margin-top: 1.2rem;
@@ -438,48 +467,59 @@ main {
         padding: 1.2rem 2.5rem;
         font-size: 1.1rem;
     }
-    
+
+    #what-i-do {
+        padding: 0;
+        padding-right: 0;
+        padding-top: 2rem;
+    }
+
+    #what-i-do ul{
+        padding-left: 0;
+    }
+
     #about-me {
-        display: grid;
-        grid-template-rows: 1fr 1fr;
+        display: flex;
+        flex-direction: column-reverse;
     }
     
     #about-me h2 {
-        font-size: 2.5rem;
+        font-size: 2.3rem;
         margin-bottom: 1rem;
     }
     
     #about-me h3 {
-        font-size: 4rem;
+        font-size: 3.1rem;
         margin-bottom: 1rem;
     }
     
     #about-me-first-div {
         text-align: left;
         padding: 3rem;
+        height: 50%;
     }
     
     #about-me-second-div {
         width: 100%;
-        height: 40rem;
+        height: 27rem;
     }
     
     #about-me-img {
-        width: 400px;
         object-fit: cover;
         width: 100%;
         height: 100%;
+        border-radius: 4px 4px 0 0;
     }
 
     #creative h2 {
         font-size: 2.5rem;
     }
-    
+
     #creative-works {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 1rem;
-        margin: 3rem 2rem;
+        margin: 3rem 0.5rem;
+        gap: 0.3rem;
     }
     
     #creative-works img {
@@ -544,39 +584,6 @@ main {
         width: 14rem;
         height: 14rem;
     }
-    
-    #about-me {
-        display: flex;
-        flex-direction: column-reverse;
-    }
-    
-    #about-me h2 {
-        font-size: 2.3rem;
-        margin-bottom: 1rem;
-    }
-    
-    #about-me h3 {
-        font-size: 3.1rem;
-        margin-bottom: 1rem;
-    }
-    
-    #about-me-first-div {
-        text-align: left;
-        padding: 3rem;
-        height: 50%;
-    }
-    
-    #about-me-second-div {
-        width: 100%;
-        height: 20rem;
-    }
-    
-    #about-me-img {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-        border-radius: 4px 4px 0 0;
-    }
 }
 
 @media (max-width: 515px) {
@@ -608,5 +615,64 @@ main {
 }
 
 @media (max-width :425px) {
+    main {
+        font-size: 1rem;
+    }
+
+    #second-main {
+        margin: 0;
+    }
     
+    .container-fluid {
+        padding-top: 3rem;
+    }
+
+    #creative-works {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin: 3rem 0.5rem;
+        gap: 0.3rem;
+    }
+
+    #first-section article h3 {
+        font-size: 1rem;
+    }
+    
+    #first-section article h2 {
+        margin-top: 1.2rem;
+        font-size: 3rem;
+    }
+    
+    #person-div {
+        top: 14rem;
+        right: 1rem;
+        width: 11rem;
+        height: 11rem;
+    }
+
+    #about-me h3 {
+        font-size: 2.7rem;
+    }
+
+    #contact {
+        margin-top: 3rem;
+        padding: 1rem 1rem;
+        font-size: 1rem;
+    }
+}
+
+
+@media (max-width: 344px) {
+    #person-div {
+        top: 14rem;
+        right: 1rem;
+        width: 10rem;
+        height: 10rem;
+    }
+
+    #contact {
+        margin-top: 3rem;
+        padding: 1rem 0.4rem;
+        font-size: 1rem;
+    }
 }
