--- a/css/index.css
+++ b/css/index.css
@@ -252,13 +252,41 @@ main {
     padding-bottom: 10px
 }
 
+@media (max-width: 1419px) {
+    #first-section {
+        height: 60rem;
+    }
+}
 
 
+@media (max-width: 1372px) {
+    #about-me {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-bottom: 8rem;
+    }
+    
+    #about-me h2 {
+        font-size: 2.5rem;
+        margin-bottom: 1.5rem;
+    }
+    
+    #about-me h3 {
+        font-size: 4.5rem;
+        margin-bottom: 2rem;
+    }
+    
+    #about-me-second-div {
+        width: 100%;
+        height: 40rem;
+    }
+}
 
 
 @media (max-width: 1024px) { 
     #first-section {
         padding: 18rem 2rem 10rem 2rem;
+        height: 50rem;
     }
     
     #first-section article {
@@ -423,6 +451,18 @@ main {
         width: 100%;
         height: 100%;
         border-radius: 4px 4px 0 0;
+    }
+}
+
+@media (max-width: 800px) {
+    #person-div{
+        position: absolute;
+        top: 26rem;
+        right: 1rem;
+        width: 16rem;
+        height: 16rem;
+        border-radius: 50%;
+        overflow: hidden;
     }
 }
 
