--- a/css/index.css
+++ b/css/index.css
@@ -65,7 +65,7 @@ main {
 .container-fluid {
     margin: 8rem 0 8rem 0;
     padding-top: 5rem;
-    background: rgb(250, 250, 147)
+    background: rgb(250, 250, 147);
 }
 
 .container-fluid h2 {
