--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -4,7 +4,7 @@ body {
 
 main {
   width: 100%;
-  padding-top: 4rem ;
+  padding-top: 4rem;
   margin-bottom: 5rem;
   background: linear-gradient(135deg, red -70%, yellow);
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
@@ -46,7 +46,7 @@ nav a {
 }
 
 #myBtnContainer {
-  margin:0 auto 5rem auto;
+  margin: 0 auto 5rem auto;
   display: flex;
   justify-content: space-around;
 }
@@ -59,9 +59,6 @@ nav a {
   font-size: 1rem;
   color: red;
   background-color: yellow;
-  transition-property: background-color;
-  transition-duration: 1s;
-  transition-timing-function: linear;
   cursor: pointer;
   margin-right: 4rem;
 }
@@ -80,7 +77,7 @@ nav a {
   height: 100%;
 }
 
-.content img{
+.content img {
   width: 100%;
   height: 100%;
 }
@@ -98,25 +95,31 @@ nav a {
     display: block;
   }
 
-  .column{
+  .column {
     height: 50rem;
   }
 
-  .content img{
+  .content img {
     width: 100%;
     height: 100%;
   }
 }
 
 @media (max-width: 992px) {
-   .btn {
+  .btn {
     padding: 1rem 1.5rem;
-   }
+  }
+}
+
+@media (max-width: 800px) {
+  nav a {
+    color: white;
+  }
 }
 
 @media (max-width: 700px) {
   #myBtnContainer {
-    margin:0 auto 5rem auto;
+    margin: 0 auto 5rem auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -125,12 +128,10 @@ nav a {
 }
 
 @media (max-width: 555px) {
-  .btn{
+  .btn {
     padding: 1rem 1rem;
   }
 }
 
 
-@media (max-width: 320px) {
-  
-}
+@media (max-width: 320px) {}
