--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -25,8 +25,8 @@ nav a {
 .column {
   width: 100%;
   object-fit: fill;
-  height: 30rem;
-  margin-bottom: 0.5rem;
+  height: 20rem;
+  margin-bottom: 30px;
   display: none;
   /* Hide columns by default */
 }
@@ -36,9 +36,10 @@ nav a {
 }
 
 #everything {
+  padding: 0 2rem 0 2rem;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 0.5rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 30px;
 }
 
 .show {
@@ -75,11 +76,51 @@ nav a {
 .content {
   width: 100%;
   height: 100%;
+  transition: transform 1s linear, border-radius 1s linear;
+}
+
+.content:hover {
+  transform: scale(0.8) rotate(-10deg);
+  border-radius: 20%;
+  box-shadow: 0 32px 75px rgba(68,77,136,0.2);
+  overflow: hidden;
 }
 
 .content img {
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.full-img{
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.9);
+  position: fixed;
+  top: 0;
+  left: 0;
+  align-items: center;
+  justify-content: center;
+  padding: 3rem 0;
+  display: none;
+  z-index: 100;
+}
+
+.full-img img{
+  width: 100%;
+  max-width: 500px;
+  height: 100%;
+  object-fit: contain;
+}
+
+.full-img span{
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
 }
 
 
@@ -90,18 +131,17 @@ nav a {
   }
 }
 
+@media (max-width: 1400px) {
+  #everything {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
 @media (max-width: 1000px) {
   #everything {
-    display: block;
-  }
-
-  .column {
-    height: 50rem;
-  }
-
-  .content img {
-    width: 100%;
-    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 }
 
@@ -125,13 +165,17 @@ nav a {
     grid-template-rows: 1fr 1fr;
     gap: 0.5rem;
   }
-}
 
-@media (max-width: 555px) {
   .btn {
-    padding: 1rem 1rem;
+    padding: 0.5rem 0.5rem;
+  }
+
+  #everything {
+    display: grid;
+    grid-template-columns: 1fr;
   }
 }
 
-
-@media (max-width: 320px) {}
+@media (max-width: 555px) {
+  
+}
