--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -27,8 +27,6 @@ nav a {
   object-fit: fill;
   height: 20rem;
   margin-bottom: 30px;
-  display: none;
-  /* Hide columns by default */
 }
 
 #buttonFullContainer {
@@ -68,7 +66,12 @@ nav a {
   background-color: rgb(192, 205, 50);
 }
 
-.btn.active {
+.btn:active {
+  background-color: rgb(192, 205, 50);
+  color: rgb(238, 87, 32);
+}
+
+.btn:focus {
   background-color: rgb(192, 205, 50);
   color: rgb(238, 87, 32);
 }
