--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -163,22 +163,22 @@ nav a {
 @media (max-width: 700px) {
   #myBtnContainer {
     margin: 0 auto 5rem auto;
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 0.5rem;
   }
 
   .btn {
-    padding: 0.5rem 0.5rem;
+    padding: 2px 0.5rem;
   }
 
+}
+
+@media (max-width: 555px) {
   #everything {
     display: grid;
     grid-template-columns: 1fr;
   }
-}
-
-@media (max-width: 555px) {
-  
 }
