--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -4,10 +4,7 @@ body {
 
 main {
   width: 100%;
-  padding-top: 4rem;
-  margin-bottom: 5rem;
-  background: linear-gradient(135deg, red -70%, yellow);
-  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
+  
 }
 
 h1 {
@@ -25,8 +22,7 @@ nav a {
 .column {
   width: 100%;
   object-fit: fill;
-  height: 20rem;
-  margin-bottom: 30px;
+  height: 100%;
 }
 
 #buttonFullContainer {
@@ -34,18 +30,141 @@ nav a {
 }
 
 #everything {
-  padding: 0 2rem 0 2rem;
+  padding: 0 2rem 2rem 2rem;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 30px;
+  grid-template-columns: repeat(15, 1fr);
+  grid-template-rows: repeat(8, 20vh);
+  gap: 15px;
 }
 
+#everything .column:nth-of-type(1){
+  grid-row: 1/3;
+  grid-column: 1/3;
+}
+
+#everything .column:nth-of-type(2){
+  grid-row: 1/2;
+  grid-column: 3/5;
+}
+
+#everything .column:nth-of-type(3){
+  grid-row: 3/5;
+  grid-column: 1/4;
+}
+
+#everything .column:nth-of-type(4){
+  grid-row: 2/3;
+  grid-column: 7/10;
+}
+
+#everything .column:nth-of-type(5){
+  grid-row: 1/3;
+  grid-column: 10/12;
+}
+
+#everything .column:nth-of-type(6){
+  grid-row: 6/8;
+  grid-column: 1/6;
+}
+
+#everything .column:nth-of-type(7){
+  grid-row: 3/6;
+  grid-column: 4/13;
+}
+
+#everything .column:nth-of-type(8){
+  grid-row: 2/3;
+  grid-column: 3/5;
+}
+
+#everything .column:nth-of-type(9){
+  grid-row: 1/2;
+  grid-column: 7/10;
+}
+
+#everything .column:nth-of-type(10){
+  grid-row: 1/3;
+  grid-column: 12/16;
+}
+
+#everything .column:nth-of-type(11){
+  grid-row: 3/4;
+  grid-column: 13/16;
+}
+
+#everything .column:nth-of-type(12){
+  grid-row: 3/5;
+  grid-column: 13/16;
+}
+
+#everything .column:nth-of-type(13){
+  grid-row: 5/6;
+  grid-column: 13/16;
+}
+
+#everything .column:nth-of-type(14){
+  grid-row: 6/8;
+  grid-column: 13/16;
+}
+
+#everything .column:nth-of-type(15){
+  grid-row: 6/8;
+  grid-column: 8/11;
+}
+
+#everything .column:nth-of-type(16){
+  grid-row: 1/3;
+  grid-column: 5/7;
+}
+
+#everything .column:nth-of-type(17){
+  grid-row: 6/8;
+  grid-column: 6/8;
+}
+
+#everything .column:nth-of-type(18){
+  grid-row: 6/8;
+  grid-column: 11/13;
+}
+
+#everything .column:nth-of-type(19){
+  grid-row: 5/6;
+  grid-column: 1/4;
+}
+
+#everything .column:nth-of-type(20){
+  grid-row: 8/9;
+  grid-column: 1/4;
+}
+
+#everything .column:nth-of-type(21){
+  grid-row: 8/9;
+  grid-column: 4/8;
+}
+
+#everything .column:nth-of-type(22){
+  grid-row: 8/9;
+  grid-column: 8/10;
+}
+
+#everything .column:nth-of-type(23){
+  grid-row: 8/9;
+  grid-column: 10/13;
+}
+
+#everything .column:nth-of-type(24){
+  grid-row: 8/9;
+  grid-column: 13/16;
+}
+
+
+  
 .show {
   display: block;
 }
 
 #myBtnContainer {
-  margin: 0 auto 5rem auto;
+  margin: 0 auto 2rem auto;
   display: flex;
   justify-content: space-around;
 }
@@ -54,7 +173,6 @@ nav a {
   border: none;
   outline: none;
   padding: 1rem 2rem;
-  border-radius: 4rem;
   font-size: 1rem;
   color: red;
   background-color: yellow;
@@ -79,24 +197,26 @@ nav a {
 .content {
   width: 100%;
   height: 100%;
-  transition: transform 1s linear, border-radius 1s linear;
 }
 
-.content:hover {
-  transform: scale(0.8) rotate(-10deg);
-  border-radius: 20%;
-  box-shadow: 0 32px 75px rgba(68,77,136,0.2);
+.content img{
+  transition: transform 0.5s linear;
+}
+
+.content img:hover {
+  transform: scale(1.05);
   overflow: hidden;
 }
 
 .content img {
   width: 100%;
   height: 100%;
+  box-shadow: 10px 10px 10px rgba(70, 68, 68);
   overflow: hidden;
   cursor: pointer;
 }
 
-.full-img{
+.full-img {
   width: 100%;
   height: 100vh;
   background: rgba(0, 0, 0, 0.9);
@@ -110,14 +230,14 @@ nav a {
   z-index: 100;
 }
 
-.full-img img{
+.full-img img {
   width: 100%;
   max-width: 500px;
   height: 100%;
   object-fit: contain;
 }
 
-.full-img span{
+.full-img i {
   position: absolute;
   top: 5%;
   right: 5%;
@@ -126,8 +246,6 @@ nav a {
   cursor: pointer;
 }
 
-
-
 @media (max-width: 1419px) {
   .btn {
     margin-right: 0;
@@ -135,17 +253,17 @@ nav a {
 }
 
 @media (max-width: 1400px) {
-  #everything {
+  /*#everything {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-  }
+  }*/
 }
 
 @media (max-width: 1000px) {
-  #everything {
+  /*#everything {
     display: grid;
     grid-template-columns: 1fr 1fr;
-  }
+  }*/
 }
 
 @media (max-width: 992px) {
