--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -30,7 +30,7 @@ nav a {
 }
 
 #everything {
-  padding: 0 2rem 2rem 2rem;
+  padding: 0 1rem 2rem 1rem;
   display: grid;
   grid-template-columns: repeat(15, 1fr);
   grid-template-rows: repeat(8, 20vh);
@@ -47,7 +47,7 @@ nav a {
   grid-column: 3/5;
 }
 
-#everything .column:nth-of-type(3){
+#everything .column:nth-of-type(9){
   grid-row: 3/5;
   grid-column: 1/4;
 }
@@ -57,7 +57,7 @@ nav a {
   grid-column: 7/10;
 }
 
-#everything .column:nth-of-type(5){
+#everything .column:nth-of-type(21){
   grid-row: 1/3;
   grid-column: 10/12;
 }
@@ -67,7 +67,7 @@ nav a {
   grid-column: 1/6;
 }
 
-#everything .column:nth-of-type(7){
+#everything .column:nth-of-type(11){
   grid-row: 3/6;
   grid-column: 4/13;
 }
@@ -77,7 +77,7 @@ nav a {
   grid-column: 3/5;
 }
 
-#everything .column:nth-of-type(9){
+#everything .column:nth-of-type(7){
   grid-row: 1/2;
   grid-column: 7/10;
 }
@@ -87,7 +87,7 @@ nav a {
   grid-column: 12/16;
 }
 
-#everything .column:nth-of-type(11){
+#everything .column:nth-of-type(19){
   grid-row: 3/4;
   grid-column: 13/16;
 }
@@ -112,7 +112,7 @@ nav a {
   grid-column: 8/11;
 }
 
-#everything .column:nth-of-type(16){
+#everything .column:nth-of-type(3){
   grid-row: 1/3;
   grid-column: 5/7;
 }
@@ -127,7 +127,7 @@ nav a {
   grid-column: 11/13;
 }
 
-#everything .column:nth-of-type(19){
+#everything .column:nth-of-type(16){
   grid-row: 5/6;
   grid-column: 1/4;
 }
@@ -137,7 +137,7 @@ nav a {
   grid-column: 1/4;
 }
 
-#everything .column:nth-of-type(21){
+#everything .column:nth-of-type(5){
   grid-row: 8/9;
   grid-column: 4/8;
 }
@@ -276,6 +276,133 @@ nav a {
   nav a {
     color: white;
   }
+
+  #everything {
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(9, 20vh);
+    gap: 15px;
+  }
+
+  #everything .column:nth-of-type(1){
+    grid-row: 1/2;
+    grid-column: 1/3;
+  }
+  
+  #everything .column:nth-of-type(2){
+    grid-row: 1/2;
+    grid-column: 3/5;
+  }
+  
+  #everything .column:nth-of-type(9){
+    grid-row: 3/5;
+    grid-column: 1/4;
+  }
+  
+  #everything .column:nth-of-type(4){
+    grid-row: 2/3;
+    grid-column: 4/8;
+  }
+  
+  #everything .column:nth-of-type(8){
+    grid-row: 2/3;
+    grid-column: 1/4;
+  }
+  
+  #everything .column:nth-of-type(6){
+    grid-row: 6/8;
+    grid-column: 1/4;
+  }
+  
+  #everything .column:nth-of-type(11){
+    grid-row: 3/6;
+    grid-column: 4/8;
+  }
+  
+  #everything .column:nth-of-type(21){
+    grid-row: 8/9;
+    grid-column: 1/4;
+  }
+  
+  #everything .column:nth-of-type(7){
+    grid-row: 1/2;
+    grid-column: 5/6;
+  }
+  
+  #everything .column:nth-of-type(10){
+    grid-row: 1/3;
+    grid-column: 8/11;
+  }
+  
+  #everything .column:nth-of-type(19){
+    grid-row: 3/4;
+    grid-column: 8/11;
+  }
+  
+  #everything .column:nth-of-type(12){
+    grid-row: 4/5;
+    grid-column: 8/11;
+  }
+  
+  #everything .column:nth-of-type(13){
+    grid-row: 5/6;
+    grid-column: 8/11;
+  }
+  
+  #everything .column:nth-of-type(14){
+    grid-row: 8/9;
+    grid-column: 8/11;
+  }
+  
+  #everything .column:nth-of-type(15){
+    grid-row: 6/8;
+    grid-column: 8/11;
+  }
+  
+  #everything .column:nth-of-type(3){
+    grid-row: 1/2;
+    grid-column: 6/8;
+  }
+  
+  #everything .column:nth-of-type(17){
+    grid-row: 6/8;
+    grid-column: 4/6;
+  }
+  
+  #everything .column:nth-of-type(18){
+    grid-row: 6/8;
+    grid-column: 6/8;
+  }
+  
+  #everything .column:nth-of-type(16){
+    grid-row: 5/6;
+    grid-column: 1/4;
+  }
+  
+  #everything .column:nth-of-type(20){
+    grid-row: 9/10;
+    grid-column: 1/4;
+  }
+  
+  #everything .column:nth-of-type(5){
+    /*grid-row: 8/9;
+    grid-column: 2/4;*/
+  }
+  
+  #everything .column:nth-of-type(22){
+    grid-row: 9/10;
+    grid-column: 4/6;
+  }
+  
+  #everything .column:nth-of-type(23){
+    grid-row: 9/10;
+    grid-column: 6/9;
+  }
+  
+  #everything .column:nth-of-type(24){
+    grid-row: 9/10;
+    grid-column: 9/11;
+  }
+  
 }
 
 @media (max-width: 700px) {
